# alias

./: .dockerignore  .flaskenv  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: run-tests.yml
dependencies/: requirements-dev.txt  requirements-dist.txt  requirements-docker.txt  requirements.dev.txt
deployment/: Caddyfile  Dockerfile.alias
src/alias/: __init__.py  _dotenv.py  app.py  cli.py  default_config.py  links.py  schema.sql
tests/: check_response.sh  conftest.py  test_app.py  test_cli.py  test_links.py
