[metadata]
name = alias
license = BSD 3-Clause license

[options]
package_dir =
    =src
packages = find:
install_requires =
    # Default requirements
    # ---
    # click
    # numpy
    # scipy
    # tqdm


[options.entry_points]
console_scripts =
    cmd = # some module

[options.extras_require]
dev =
    flake8
    mypy
