[metadata]
name = alias
license = BSD 3-Clause license

[options]
package_dir =
    =src
packages = find:
install_requires =
    click
    flask

[options.entry_points]
console_scripts =
    alias-app = alias.cli:main

[options.extras_require]
dev =
    flake8
    mypy
    python-dotenv

dist =
    setuptools-scm
    toml

[flake8]
max-line-length = 100
