[metadata]
name = alias
license = BSD 3-Clause license

[options]
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    click
    flask

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    alias-app = alias.cli:main

[options.extras_require]
dev =
    flake8
    mypy
    pytest
    pytest-cov
    python-dotenv
    tox

dist =
    setuptools-scm
    toml

[flake8]
max-line-length = 100
